src/objects/AB2__AdBookDynamicPropertyListValues__c.object
<CustomObject>
    <description>List values for an AdBook Dynamic Property of Type List.</description>
    <fields>
        <fullName>AB2__AdBookDynamicPropertyID__c</fullName>
        <formula>AB2__AdBookDynamicProperty__r.AB2__DynamicPropertyID__c</formula>
        <label>AdBook UDF ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookDynamicPropertyName__c</fullName>
        <description>Formula Field to expose the Dynamic Property Name that this List Value belongs to.</description>
        <formula>AB2__AdBookDynamicProperty__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UDF Name that this List Value belongs to.</inlineHelpText>
        <label>AdBook UDF Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookDynamicPropertyObjectType__c</fullName>
        <formula>TEXT(AB2__AdBookDynamicProperty__r.AB2__ObjectType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdBook UDF Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookDynamicPropertyType__c</fullName>
        <formula>TEXT(AB2__AdBookDynamicProperty__r.AB2__DynamicPropertyType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdBook UDF Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookDynamicProperty__c</fullName>
        <description>The list Dynamic Property that this value is for.</description>
        <inlineHelpText>The list Dynamic Property that this value is for.</inlineHelpText>
        <label>AdBook UDF</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__AdBookDynamicProperty__c.AB2__DynamicPropertyType__c</field>
                <operation>contains</operation>
                <value>List</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__AdBookDynamicProperty__c</referenceTo>
        <relationshipLabel>AdBook UDF List Values</relationshipLabel>
        <relationshipName>AdBook_Dynamic_Property_List_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__Description__c</fullName>
        <description>Configured description for the list item.</description>
        <inlineHelpText>Configured description for the list item.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Value__c</fullName>
        <description>Value of the list item.</description>
        <externalId>true</externalId>
        <inlineHelpText>Value of the list item.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>AdBook UDF List Values</label>
    <nameField>
        <label>AdBook UDF List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook UDF List Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>